# Giannitune

./: .gitignore  CMakeLists.txt  INSTALL.md  NOTICE.md  README.md
cmake/: FetchDependencies.cmake
installer/macos/: build_pkg.sh
installer/windows/: generate_branding.py  giannitune.iss
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h
src/dsp/: CrystalExciter.cpp  CrystalExciter.h  DelayLine.cpp  DelayLine.h  PitchDetector.cpp  PitchDetector.h  PitchShifter.cpp  PitchShifter.h  PsolaShifter.cpp  PsolaShifter.h  ScaleQuantizer.cpp  ScaleQuantizer.h  SignalsmithShifter.cpp  SignalsmithShifter.h
src/gui/: GianniLookAndFeel.cpp  GianniLookAndFeel.h
src/params/: Parameters.cpp  Parameters.h
src/telemetry/: Telemetry.cpp  Telemetry.h
